--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:layout_marginBottom="40dp">
+        android:layout_marginBottom="20dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,7 +37,23 @@
             android:textColor="#fff"
             android:textSize="20sp" />
 
+
+
     </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:progress="7"
+        android:progressTint="#ffffff"
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:layout_width="match_parent"
@@ -114,6 +130,24 @@
             android:layout_gravity="right"
             android:text="Next"
             android:layout_alignParentRight="true" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="right"
+            android:layout_marginStart="56dp"
+            android:layout_marginLeft="56dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginRight="55dp"
+            android:layout_toStartOf="@+id/Nextbutton"
+            android:layout_toLeftOf="@+id/Nextbutton"
+            android:layout_toEndOf="@+id/Previousbutton"
+            android:layout_toRightOf="@+id/Previousbutton"
+            android:onClick="ShowAlertDialog"
+            android:text="Go home" />
     </RelativeLayout>
 
 
