--- a/app/src/main/res/layout/study_test_results.xml
+++ b/app/src/main/res/layout/study_test_results.xml
@@ -27,34 +27,34 @@
         android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:textColor="#FFFFFF"
-        android:layout_marginTop="183dp"
+        android:layout_marginTop="228dp"
         android:autoLink="web"
         android:gravity="center"
         android:text="@string/text_to_change1"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF" />
 
     <TextView
         android:id="@+id/text_to_change2"
         android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="238dp"
+        android:layout_marginTop="290dp"
         android:gravity="center"
-        android:textColor="#FFFFFF"
         android:text="@string/text_to_change2"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF" />
 
     <TextView
         android:id="@+id/text_to_change3"
         android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="295dp"
+        android:layout_marginTop="351dp"
         android:gravity="center"
-        android:textColor="#FFFFFF"
         android:text="@string/text_to_change3"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF" />
 
     <TextView
         android:id="@+id/text_to_show"
@@ -90,5 +90,22 @@
         android:layout_marginRight="109dp"
         android:background="@drawable/custom_button"
         android:text="@string/back_button" />
+
+    <Button
+        android:id="@+id/continue_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="110dp"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="491dp"
+        android:layout_marginEnd="109dp"
+        android:layout_marginRight="109dp"
+        android:background="@drawable/custom_button"
+        android:text="Continue with test" />
 
 </RelativeLayout>
