--- a/app/src/main/res/layout/coding_quiz_info.xml
+++ b/app/src/main/res/layout/coding_quiz_info.xml
@@ -24,16 +24,15 @@
 
             <TextView
                 android:id="@+id/textView10"
-                android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_width="399dp"
+                android:layout_height="231dp"
                 android:layout_margin="5dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:text="Welcome to the coding quiz. In this game you will see simple code examples where a random field is left blank. Now it is up to you to fill in the correct answer.\n\nIn the quiz you will see two sides of information. The left side displays the code with a blank field.
-The right side will display the values for the variables.\n\nTo gain some more insight see the example below:"
+                android:text="Welcome to the coding quiz. In this game you will see simple code examples from the language Python where a random field is left blank. The code examples require some basic knowledge about algebra, boolean values and loops. Now it is up to you to fill in the correct answer.\n\nThe code is displayed in one column from top to bottom.\n\nTo gain some more insight see the example below:"
                 android:textColor="#ffffff"
                 android:textSize="17dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -79,12 +78,12 @@ The right side will display the values for the variables.\n\nTo gain some more i
 
             <ImageView
                 android:id="@+id/imageView6"
-                android:layout_width="match_parent"
-                android:layout_height="128dp"
+                android:layout_width="400dp"
+                android:layout_height="156dp"
                 android:layout_margin="5dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
